# Rust-Test-Task-1

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: database.rs  handlers.rs  main.rs  models.rs  routes.rs  template.rs  utils.rs
templates/: home.html
